--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -16,3 +16,10 @@ spring:
   redis:
     host: localhost
     port: 6379
+      
+      
+oauth:
+  kakao:
+    token-request-uri: https://kauth.kakao.com/oauth/token
+    client-id: ef80aa676a39c68abe9ada569d9ab70b
+    redirect-uri: http://localhost:8080/api/auth/oauth/kakao/callback
