--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -21,5 +21,6 @@ spring:
 oauth:
   kakao:
     token-request-uri: https://kauth.kakao.com/oauth/token
+    token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
     client-id: ef80aa676a39c68abe9ada569d9ab70b
     redirect-uri: http://localhost:8080/api/auth/oauth/kakao/callback
