--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
         format_sql: true
     show-sql: true
 
-  redis:
-    host: localhost
-    port: 6379
+#  redis:
+#    host: localhost
+#    port: 6379
       
       
 oauth:
