--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/wingterview?useUnicode=true&character_set_server=utf8mb4&serverTimezone=Asia/Seoul
     username: root
-    password: wingter12!
+    password: Wingter12!
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -13,9 +13,9 @@ spring:
         format_sql: true
     show-sql: true
 
-  redis:
-    host: localhost
-    port: 6379
+#  redis:
+#    host: localhost
+#    port: 6379
       
       
 oauth:
