--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -23,4 +23,4 @@ oauth:
     token-request-uri: https://kauth.kakao.com/oauth/token
     token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
     client-id: ${KAKAO_CLIENT_ID}
-    redirect-uri: http://localhost:5173/auth/kakao/
+    redirect-uri: http://43.203.77.116/auth/kakao/
