--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -1,9 +1,14 @@
+
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/wingterview?useUnicode=true&character_set_server=utf8mb4&serverTimezone=Asia/Seoul
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  config:
+    import: application-secret.yml
 
   jpa:
     hibernate:
@@ -22,5 +27,5 @@ oauth:
   kakao:
     token-request-uri: https://kauth.kakao.com/oauth/token
     token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
-    client-id: ${KAKAO_CLIENT_ID}
     redirect-uri: http://43.203.77.116/auth/kakao/
+    client-id: ${oauth.kakao.client-id}
