feat: question selection, question creation implement done

--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -27,5 +27,8 @@ oauth:
   kakao:
     token-request-uri: https://kauth.kakao.com/oauth/token
     token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
-    redirect-uri: http://43.203.77.116/auth/kakao
+    redirect-uri: http://localhost:5173/auth/kakao
     client-id: ${oauth.kakao.client-id}
+
+ai:
+  follow-up-url: http://35.216.28.161:8000/interview/followup-questions
