--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -27,7 +27,7 @@ oauth:
   kakao:
     token-request-uri: https://kauth.kakao.com/oauth/token
     token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
-    redirect-uri: http://43.203.77.116/auth/kakao
+    redirect-uri: http://wingterview.com/auth/kakao
     client-id: ${oauth.kakao.client-id}
 
 ai:
