--- a/wingterview/build.gradle
+++ b/wingterview/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'          // Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'     // OAuth2 Client (소셜 로그인)
 //	implementation 'org.springframework.boot:spring-boot-starter-actuator'          // 서버 모니터링
-//	implementation 'org.springframework.boot:spring-boot-starter-amqp'              // RabbitMQ (AMQP)
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'              // RabbitMQ (AMQP)
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'          // JPA + Hibernate
 //	implementation 'org.springframework.boot:spring-boot-starter-data-redis'        // Redis 캐시
 	implementation 'org.springframework.boot:spring-boot-starter-validation'        // Validation (@NotBlank 등)
