--- a/wingterview/Jenkinsfile
+++ b/wingterview/Jenkinsfile
@@ -14,39 +14,31 @@ pipeline {
 
     stage('Build') {
       steps {
-        dir('wingterview') {
-          sh './gradlew clean build -x test'
+        sh './gradlew clean build -x test'
+      }
+    }
+
+    stage('Docker Build & Push') {
+      steps {
+        withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+          sh """
+            docker build -t \$DOCKER_IMAGE .
+            echo \$DOCKER_PASSWORD | docker login -u \$DOCKER_USERNAME --password-stdin
+            docker push \$DOCKER_IMAGE
+          """
         }
       }
     }
 
-stage('Build') {
-  steps {
-    sh './gradlew clean build -x test'
-  }
-}
-stage('Docker Build & Push') {
-  steps {
-    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
-      sh """
-        docker build -t $DOCKER_IMAGE .
-        echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-        docker push $DOCKER_IMAGE
-      """
-    }
-  }
-}
-
-
     stage('Deploy to EC2') {
       steps {
-        sshagent (credentials: ['backend-ec2-key']) {
+        sshagent (credentials: ['ec2-user']) {
           sh """
             ssh -o StrictHostKeyChecking=no ec2-user@172.31.11.169 '
-              docker pull $DOCKER_IMAGE &&
-              docker stop wingterview || true &&
-              docker rm wingterview || true &&
-              docker run -d --name wingterview -p 8080:8080 $DOCKER_IMAGE
+              docker pull \$DOCKER_IMAGE
+              docker stop app || true
+              docker rm app || true
+              docker run -d --name app -p 8080:8080 \$DOCKER_IMAGE
             '
           """
         }
