--- a/wingterview/Dockerfile
+++ b/wingterview/Dockerfile
@@ -4,5 +4,8 @@ WORKDIR /app
 # JAR 파일을 컨테이너에 복사
 COPY build/libs/*.jar app.jar
 
+# 애플리케이션 설정 파일 복사
+COPY application-secret.yml application-secret.yml
+
 # 애플리케이션 실행
 ENTRYPOINT ["java", "-jar", "app.jar"]
