--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -42,7 +42,7 @@ oauth:
   kakao:
     token-request-uri: https://kauth.kakao.com/oauth/token
     token-info-uri: https://kapi.kakao.com/v1/user/access_token_info
-#    redirect-uri: https://dev.s3.wingterview.com/oauth/kakao
+#    redirect-uri: https://dev.s3.wingterview.com/auth/kakao
 #    redirect-uri: http://localhost:5173/auth/kakao
 #    redirect-uri: http://wingterview.com/auth/kakao
     redirect-uri: https://wingterview.com/auth/kakao
