--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   datasource:
 #    url: jdbc:mysql://localhost:3306/wingterview?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
@@ -20,10 +18,10 @@ spring:
     show-sql: true
 
   rabbitmq:
-    host: localhost
-    port: 5672
-    username : ${AMQP_USERNAME}
-    password: ${AMQP_PASSWORD}
+    host: ${SPRING_RABBITMQ_HOST}
+    port: ${SPRING_RABBITMQ_PORT}
+    username: ${SPRING_RABBITMQ_USERNAME}
+    password: ${SPRING_RABBITMQ_PASSWORD}
 
 rabbitmq:
   queue:
@@ -37,7 +35,6 @@ rabbitmq:
 #    host: localhost
 #    port: 6379
       
-      
 oauth:
   kakao:
     token-request-uri: https://kauth.kakao.com/oauth/token
@@ -46,24 +43,23 @@ oauth:
 #    redirect-uri: http://localhost:5173/auth/kakao
 #    redirect-uri: http://wingterview.com/auth/kakao
     redirect-uri: https://wingterview.com/auth/kakao
-
-    client-id: ${oauth.kakao.client-id}
+    client-id: ${OAUTH_KAKAO_CLIENT_ID}
 
 ai:
   follow-up-url: https://ai.wingterview.com/interview/followup-questions
-  api-key: {ai.api-key}
-  api-url: {ai.api-url}
+  api-key: ${AI_API_KEY}
+  api-url: ${AI_API_URL}
 
 cloud:
   aws:
     region:
-      static: ${region}
+      static: ${CLOUD_AWS_REGION_STATIC}
     s3:
-      bucket: ${bucket}
+      bucket: ${CLOUD_AWS_S3_BUCKET}
 
   credentials:
-    access-key: ${accessKey}
-    secret-key: ${secretKey}
+    access-key: ${CLOUD_CREDENTIALS_ACCESS_KEY}
+    secret-key: ${CLOUD_CREDENTIALS_SECRET_KEY}
     stack:
       auto: false
 
