--- a/wingterview/Dockerfile
+++ b/wingterview/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:21-jdk-slim
 WORKDIR /app
 
-# JAR 파일을 컨테이너에 복사
-COPY build/libs/*.jar app.jar
+# JAR 파일과 설정 파일을 모두 복사
+COPY build/libs/app.jar app.jar
+COPY application-secret.yml application-secret.yml
 
-# 애플리케이션 실행
 ENTRYPOINT ["java", "-jar", "app.jar"]
