--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
     password: ${DB_PASSWORD}
 
   config:
-    import: application-secret.yml
+    import: optional:file:application-secret.yml
+
 
   jpa:
     hibernate:
