--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-#    url: jdbc:mysql://localhost:3306/wingterview?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
-    url: jdbc:mysql://prod-rds-az1.c7yeqiwak4u9.ap-northeast-2.rds.amazonaws.com:3306/wingterview?useUnicode=true&character_set_server=utf8mb4&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/wingterview?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+    #url: jdbc:mysql://prod-rds-az1.c7yeqiwak4u9.ap-northeast-2.rds.amazonaws.com:3306/wingterview?useUnicode=true&character_set_server=utf8mb4&serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
