Revert "dev to main"

--- a/wingterview/build.gradle
+++ b/wingterview/build.gradle
@@ -31,46 +31,61 @@ ext {
 
 dependencies {
 	// --- Spring Boot Starter ---
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	implementation 'org.springframework.boot:spring-boot-starter-amqp'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-web'               // MVC + REST API
+	implementation 'org.springframework.boot:spring-boot-starter-security'          // Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'     // OAuth2 Client (소셜 로그인)
+//	implementation 'org.springframework.boot:spring-boot-starter-actuator'          // 서버 모니터링
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'              // RabbitMQ (AMQP)
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'          // JPA + Hibernate
+//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'        // Redis 캐시
+	implementation 'org.springframework.boot:spring-boot-starter-validation'        // Validation (@NotBlank 등)
+
+	// --- Cloud, Circuit Breaker ---
+//	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j' // Resilience4j
 
 	// --- OpenAPI (Swagger 문서 자동화) ---
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 
 	// --- Database Driver ---
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j'                                        // MySQL JDBC Driver
 
-	// --- QueryDSL ---
+	// --- QueryDSL (타입 안전한 쿼리) ---
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
-	// --- JWT 인증 ---
+	// --- JWT 인증 (토큰 발급/검증) ---
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6' // JSON 직렬화 지원
 
 	// --- AWS S3 Presigned URL 업로드 ---
 	implementation 'software.amazon.awssdk:s3:2.31.16'
 
-	// --- HTTP 클라이언트 ---
+	// --- RestClient (간편한 HTTP 클라이언트) ---
 	implementation 'org.springframework:spring-web'
 
 	// --- 개발 편의성 ---
-	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'                                            // Lombok
 	annotationProcessor 'org.projectlombok:lombok'
 
-	// --- MapStruct ---
+
+	// --- MapStruct (Dto <-> Entity) ---
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
-	// --- 테스트 (주석처리된 항목들) ---
-	// 필요 시 활성화
+
+	// --- 테스트 ---
+//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	testImplementation 'org.springframework.boot:spring-boot-testcontainers'         // Spring Boot + Testcontainers
+//	testImplementation 'org.springframework.amqp:spring-rabbit-test'                 // RabbitMQ 테스트
+//	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'         // REST Docs
+//	testImplementation 'org.springframework.security:spring-security-test'           // Security 테스트
+//	testImplementation 'org.testcontainers:junit-jupiter'                            // JUnit5 + Testcontainers
+//	testImplementation 'org.testcontainers:mysql'                                    // MySQL 컨테이너
+//	testImplementation 'org.testcontainers:rabbitmq'                                 // RabbitMQ 컨테이너
+//	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 dependencyManagement {
@@ -96,13 +111,4 @@ tasks.withType(JavaCompile) {
 
 sourceSets {
 	main.java.srcDirs += "$buildDir/generated/sources/annotationProcessor/java/main"
-}
-
-//  Spring Boot JAR 빌드 설정 --> ci/cd용 
-tasks.named('bootJar') {
-	enabled = true
-}
-
-tasks.named('jar') {
-	enabled = false
 }
