--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
-  config:
-    import: application-secret.yml
+  #config:
+   # import: application-secret.yml
 
   jpa:
     hibernate:
