hotfix : amqp routing key error

--- a/wingterview/src/main/resources/application.yml
+++ b/wingterview/src/main/resources/application.yml
@@ -30,7 +30,7 @@ rabbitmq:
   exchange:
     name: ai.request.exchange
   routing:
-    key : ai.request.single
+    key : ai.request.routingKey
 
 #  redis:
 #    host: localhost
