--- a/wingterview/build.gradle
+++ b/wingterview/build.gradle
@@ -37,6 +37,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	
+	// --- Monitoring ---
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-registry-prometheus'
 
 	// --- OpenAPI (Swagger 문서 자동화) ---
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
